--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
             height: 100vh;
         }
         #video-wrapper video {
-            background-attachment: fixed;
-            background-position: center center;
-            background-size: cover;
+            object-fit: cover;
             min-width: 100vw;
             min-height: 100vh;
         }
