--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         }
         #video-wrapper video {
             object-fit: cover;
-            min-width: 100vw;
-            min-height: 100vh;
+            width: 100vw;
+            height: 100vh;
         }
         #video-wrapper .text {
             position: absolute;
