--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="favicon.ico" type="image/png">
     <link rel="canonical" href="サイトURL">
     <link rel="stylesheet" href="CSSのURL">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.12.2/lottie.min.js" type="text/javascript"></script>
     <style>
         *, *::before, *::after {
             box-sizing: border-box;
@@ -92,9 +93,7 @@
         <video autoplay loop muted playsinline>
             <source src="sample2.mp4">
         </video>
-        <div class="text">
-            G-HOLDINGS
-        </div>
+        <div id="lottie"></div>
     </div>
     <main>
         <div>
@@ -112,5 +111,14 @@
     </main>
     <footer>
     </footer>
+    <script>
+        let animation = bodymovin.loadAnimation({
+            container: document.getElementById('lottie'), 
+            renderer: 'svg',
+            loop: true,
+            autoplay: true,
+            path: 'title.lottie'
+        });
+    </script>
 </body>
 </html>
