--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             renderer: 'svg',
             loop: true,
             autoplay: true,
-            path: 'title.lottie'
+            path: 'title.json'
         });
     </script>
 </body>
