--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             width: 100vw;
             height: 100vh;
         }
-        #video-wrapper .text {
+        #video-wrapper #lottie {
             position: absolute;
             left: 50%;
             top: 50%;
@@ -59,6 +59,7 @@
             z-index: 10;
             color: white;
             font-size: 90px;
+            background: white;
         }
         main {
             display: flex;
